deploy/k8s/overlays/dev/deces-backend.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deces-backend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: deces-backend
          resources:
            requests:
              cpu: 30m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
