deploy/k8s/overlays/dev/deces-ui.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deces-ui
spec:
  template:
    spec:
      containers:
        - name: deces-ui
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
