deploy/k8s/overlays/dev/elasticsearch.dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    spec:
      containers:
        - name: elasticsearch
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 1500m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: block-standard
        volumeMode: Filesystem
        resources:
          requests:
            storage: 5Gi
