deploy/k8s/overlays/dev/redis.dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 15m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app.kubernetes.io/part-of: matchid
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: block-standard
        volumeMode: Filesystem
        resources:
          requests:
            storage: 2Gi
